--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,8 +1,27 @@
-body {font-family: Arial, sans-serif;}
-h1 {font-size: 3.0em;}
-h2 {font-size: 2.5.0em;}
-h3 {font-size: 2.0em;}
-h4 {font-size: 1.5em;}
-p {margin-bottom: 20px;}
+body {
+	font-family: Arial, sans-serif;
+}
 
-.pageContainer {margin: 20px 0 20px 0;}
+h1 {
+	font-size: 3.0em;
+}
+
+h2 {
+	font-size: 2.5 .0em;
+}
+
+h3 {
+	font-size: 2.0em;
+}
+
+h4 {
+	font-size: 1.5em;
+}
+
+p {
+	margin-bottom: 20px;
+}
+
+.pageContainer {
+	margin: 20px 0 20px 0;
+}
