--- a/view/error/error.phtml
+++ b/view/error/error.phtml
@@ -1,2 +1,6 @@
-<div align="center"><h1><?php echo $this->title ?></h1></div>
-<div align="center"><span style="color: red"><?php echo $this->message ?></span></div>
+<div align="center">
+	<h1><?php echo $this->title ?></h1>
+</div>
+<div align="center">
+	<span style="color: red"><?php echo $this->message ?></span>
+</div>
